update: testSet接口
