# api/model/db.py
@@ -231,14 +231,21 @@ class Demand(MySQLModel):
         db_table = 'demand'
 
 
-class TestSet(MySQLModel):
-    '''测试集'''
-    id = db_autoId()
+class TestSetBase(MySQLModel):
+    '''测试集表基类'''
     name = db_char()
     detail = TextField(null=True)
     projectId = db_id()
     releaseId = db_id()
-    memberId = ForeignKeyField(User, related_name='testSet')
+    memberId = db_id()
+
+    class Meta:
+        db_table = 'test_set'
+
+
+class TestSet(TestSetBase):
+    '''测试集表'''
+    id = db_autoId()
 
     class Meta:
         db_table = 'test_set'
